cc: Scroll on main when possible incorrect hit testing hits scrollbar.

As explained in crrev.com/238803005, it is possible that the composited
layers have holes, if the point hits the first layer below the viewport
point and the scrollbar layer, and the scrollbar layer is not an ancestor
of the former layer, we should scroll on main, as shown below:

1) Should scroll on main:

+--.....
+----scroll_layer
+----scrollbar_layer (<-viewport point hits this)
+--....
+----....composited_unscrollable_layer (<-viewport point hits this)

2) Can scroll on impl:
+--....
+----scroll_layer
+----scrollbar_layer (<-viewport point hits this)
+----....composited_unscrollable_layer (<-viewport point hits this)

BUG=601342
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1878323002

Cr-Commit-Position: refs/heads/master@{#386880}

Former-commit-id: 0b34eb5f70ea985690e856d6f58284835e629c75